tests/baselines/reference/staticMemberAssignsToStructConstructorFunctionMembers_basic.errors.txt
tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/staticMemberAssignsToStructConstructorFunctionMembers_basic.ts(7,9): error TS2322: Type '() => void' is not assignable to type '(x: number) => number':
  Type 'void' is not assignable to type 'number'.


==== tests/cases/conformance/basicStructs/propertyMemberDeclarations_basic/memberFunctionDeclarations_basic/staticMemberAssignsToStructConstructorFunctionMembers_basic.ts (1 errors) ====
    struct C {
        static foo() {
            C.foo = () => { }
        }
    
        static bar(x: number): number {
            C.bar = () => { } // error, Type '() => void' is not assignable to type '(x: number) => number'
            ~~~~~
!!! error TS2322: Type '() => void' is not assignable to type '(x: number) => number':
!!! error TS2322:   Type 'void' is not assignable to type 'number'.
            C.bar = (x) => x; // ok
            C.bar = (x: number) => 1; // ok
            return 1;
        }
    }